# geodesic-raytracer

./: .gitignore  CMakeLists.txt  README.md  christoffel_symbols.py  christoffel_symbols.wl
Tutorial/: README.md
Tutorial/OpenGL/01/: main.c
demo/: demo.ipynb
src/: main.cpp  raytracer.cu  raytracer.cuh  renderer.cpp  renderer.h
tutorial/: README.md
tutorial/OpenGL/01/: main.c
tutorial/OpenGL/02/: main.c
tutorial/OpenGL/03/: main.c
tutorial/OpenGL/04/: main.c
tutorial/OpenGL/05/: main.c  myshader.frag  myshader.vert
